# matchbook

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  render.yaml  tsconfig.json
.github/workflows/: airdrop.yml  e2e.yml  keepalive.yml  pages.yml  tape.yml
app/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: BottomPanel.tsx  CommandPalette.tsx  ConnectScreen.tsx  OrderBook.tsx  OrderForm.tsx  PriceChart.tsx  Toasts.tsx  TopBar.tsx  TradesFeed.tsx
app/e2e/: perps.e2e.mjs  signing.e2e.mjs  terminal.e2e.mjs
app/lib/: chain.ts  dev-wallet.json  format.ts  indexer.ts  mock.ts  roles.ts  store.ts  types.ts
app/lib/__tests__/: indexer.test.ts  mock.test.ts  session.test.ts  store.test.ts
app/lib/idl/: clob.json
docs/: ARCHITECTURE.md  DEPLOY.md
indexer/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
indexer/migrations/: 0001_init.sql  0002_perps.sql
indexer/src/: api.rs  book.rs  events.rs  ingest.rs  main.rs  rpc.rs  store.rs
programs/clob/: Cargo.toml
programs/clob/src/: errors.rs  events.rs  lib.rs
programs/clob/src/instructions/: cancel_all.rs  cancel_order.rs  collateral.rs  consume_events.rs  create_margin_account.rs  create_open_orders.rs  deposit.rs  init_market.rs  init_perp_market.rs  liquidate.rs  mod.rs  open_position.rs  place_order.rs  set_oracle_price.rs  update_funding.rs  withdraw.rs
programs/clob/src/state/: event_queue.rs  margin_account.rs  market.rs  mod.rs  open_orders.rs  orderbook.rs  perp_market.rs
scripts/: airdrop.mjs  perp-keeper.mjs  seed-market.mjs  tape-maker.json  tape-run.mjs  tape-setup.mjs
tests/: clob.ts  perps.ts
