[package]
name = "clob"
version = "0.1.0"
description = "Central limit orderbook DEX on Solana (learning project)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clob"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
